FTP and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.4b4
- [Bugfix] Drag and drop operations
- [Bugfix] SSH exception handling (SFTP)
- [Bugfix] Bookmark selection in connection dialog
- [Bugfix] Items in transfer window not removed
- [Bugfix] Deleting more than one bookmark at once
- [Bugfix] Corrupted resource file in zh_TW localization

2.4b3
- [Localize] Russian Localization
- [Feature] Preliminary AppleScript support (see .scpt script samples)
- [Feature] Quick Connect field and hostname field in connection dialog accept URLs as input
- [Feature] Reordering bookmarks using drag and drop
- [Bugfix] Deleting more than 10 files at once
- [Bugfix] Typing in transfer window causes crash
- [Bugfix] Transcript causes crash
- [Bugfix] Reporting correct file size for large files
- [Bugfix] Disable resume on ASCII tranfers (FTP)
- [Bugfix] Incompatiblity with Filezilla Server (FTP)
- [Bugfix] Synchronizing current working directory
- [Bugfix] Graceful failure on SSH connection problems (SFTP)
- [Bugfix] Correctly resolving '~' in filenames
- [Bugfix] Bug fixes

2.4b2
- [Feature] Allow the selection of files in the browser by typing more than just the first character of the filename
- [Feature] A bookmark in the drawer can be selected by typing its hostname
- [Feature] Preserve the modification date on upload (SFTP)
- [Feature] Preserve the modification date on upload if the server supports 'CHMOD UTIME' (FTP)
- [Bugfix] Determine changed files based on modification date when synchronizing
- [Bugfix] Opening an URL linking to a file opens a browser window
- [Bugfix] Changing the username of a newly created bookmark of a connected server might affect an existing bookmark of the same server but with a different username.
- [Bugfix] Logging the response of 'LIST' (FTP)
- [Bugfix] Selection of bookmark in connection dialog